--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.56.0",
     "@types/pdf-parse": "^1.1.5",
+    "@types/qrcode": "^1.5.5",
     "@types/web-push": "^3.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.5.2",
+    "node-poppler": "^8.0.4",
     "openai": "^5.16.0",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^5.4.54",
     "puppeteer": "^24.17.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
